--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     //compile 'com.github.pires:obd-java-api:1.0-RC16'
+    compile 'com.jjoe64:graphview:4.2.1'
 }
